--- a/workPages/ballpit/styles.css
+++ b/workPages/ballpit/styles.css
@@ -27,6 +27,7 @@ body {
     max-height: 20vh;
     display: block;
     margin: 0 auto;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 .commentContainer {
