--- a/workPages/bedroom/styles.css
+++ b/workPages/bedroom/styles.css
@@ -20,6 +20,7 @@ body {
     max-height: 20vh;
     width: auto;
     height: 100%;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 .eyeContainer a img {
